--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <li>دارای بند های نگهداری سینه و کمر</li>
             </ul>
             <a class="a3 animate__animated  animate__bounceIn" href="#" title="توضیحات بیشتر و خرید">
-                خرید کنید
+                <p>خرید کنید</p>
             </a>
 
     </div>
@@ -252,7 +252,7 @@
             <div class="matn5 animate__animated  animate__bounceInUp">
                 <div class="khat2 "></div>
 
-                <a href="#" title="نمایش بیشتر" target="_blank">نمایش بیشتر</a>
+                <a href="#" title="نمایش بیشتر" target="_blank">نمایش  </a>
 
                 <div class="khat3"></div>
 
