--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <p id="p" class="animate__animated animate__backInUp" >در بلندترین شب سال، با تخفیف ویژه خرید کنید و لذت خرید آنلاین را بچشید. از ۲۰ تا ۸۰ درصد <br>تخفیف فقط تا پایان شب یلدا ...</p>
         <div class="start-btn ">
 
-            <a href="#" class="animate__animated animate__backInUp" title="بزن بریم ">بزن بریم </a>
+            <a href="#" class="animate__animated animate__backInUp" title="بزن بریم "><p class="p6">بزن بریم</p> </a>
 
         </div>
         <div class="anar wow bounceInUp animate__animated animate__backInUp  "></div>
